# docracy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  MARKETING.md  READEME.md  README.md  compose.yml  opencode.json  postgres-schema-draft.sql
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/notes/: 2026-04-08-condensed-system-prompts-should-keep.md
.planning/phases/01-cli-mvp-core-finalization/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/01-mcp-crate-interface-boundary/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-test-harness-validation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/02-tool-surface-stdio-delivery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-HUMAN-UAT.md  02-OPENCODE.md  02-VERIFICATION.md
.planning/phases/03-stabilization-gap-closure/: 03-01-PLAN.md  03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-audit-verification-closure/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/06-craft-launch-marketing-plan/: 06-01-SUMMARY.md
.planning/phases/07-custom-sql-query-strings/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-workspace-tenancy-via-mcp-session-binding-and-postgres-rls-isolation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-cli-workspace-create-command/: 09-01-PLAN.md  09-01-SUMMARY.md  09-CONTEXT.md  09-VERIFICATION.md
.planning/phases/10-task-scoped-init-contexts/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-VERIFICATION.md
.planning/phases/11-refresh-readme-usage-docs/: 11-01-PLAN.md  11-01-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  MCP_SERVER.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_stderr.rs  workspace_create.rs
crates/cli/tests/fixtures/: create_workspace_invalid_id.stderr.json  missing_database_url.stderr.json
crates/core/: Cargo.toml
crates/core/src/: document.rs  errors.rs  governance.rs  ids.rs  lib.rs  memory.rs  query.rs  repository.rs  revision.rs  service.rs  validation.rs  vector.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: config.rs  error.rs  lib.rs  operations.rs  runtime.rs  tools.rs
crates/mcp/tests/: operations.rs  stdio_binary_smoke.rs  tool_contract.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: indexer.rs  lib.rs  vector.rs
crates/postgres/tests/: embedding_queue_integration.rs  indexer_integration.rs  postgres_integration.rs
governance/: CONSTITUTION.md
migrations/: 0001_documents_and_revisions.sql  0002_single_constitution.sql  0003_content_search.sql  0004_repository_invariants.sql  0005_governance_type_cleanup.sql  0006_workspace_tenancy.sql  0007_vector_mirror_queue.sql  0008_embedding_job_queue.sql
(+32 files in other folders)
