[package]
name = "docracy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt"] }

[lib]
path = "src/lib.rs"
