[package]
name = "docracy-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
docracy-core = { path = "../core" }
docracy-postgres = { path = "../postgres" }
rmcp = { version = "1.3.0", features = ["server", "client", "local", "transport-io", "transport-async-rw", "schemars"] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["std", "v4"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "io-std", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lib]
path = "src/lib.rs"
