[package]
name = "docracy-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
docracy-core = { path = "../core" }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "macros"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["clock"] }
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
